<resources>
    <string name="app_name">bundle_main</string>
    <string name="hot1">热门拼团</string>
    <string name="hot2">HOT</string>
    <string name="fast_group_buy">快速拼团</string>
    <string name="now_str">NOW</string>
    <string name="more_introduce1">更多推荐</string>
    <string name="more_introduce2">BEST</string>
    <string name="unit_rmb">¥</string>
    <string name="NO">NO</string>
    <string name="full">满</string>
    <string name="good_detail_str">商品详情</string>
    <string name="pass_group_buy_str">往期团购</string>
    <string name="group_buy_rule_str">拼团规则</string>
    <string name="join_record_str">参与记录</string>
    <string name="book_buy">预约订购</string>
    <string name="send_now">发布</string>
    <string name="look_all_record">查看所有参与记录</string>
    <string name="joined">参与了优惠团购</string>
    <string name="unit_pour">注</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">正在加载...</string>
    <string name="person_see">人围观</string>
    <string name="input_something">请输入想说的话...</string>
    <string name="select">%1$s/%2$s</string>
    <string name="delete">删除</string>
    <string name="think_good">认为很赞</string>
    <string name="show_order_detail">晒单详情</string>
    <string name="message">消息</string>
    <string name="raid_rules">夺宝规则</string>
    <string name="introduce_for_gift">表格</string>
    <string name="buy_record">购买记录</string>
    <string name="group_buy_records">拼团记录</string>
    <string name="my_show_order">我的晒单</string>
    <string name="expendable_list">可扩展列表</string>
    <string name="show_order">晒单</string>
    <string name="show_something">晒一晒</string>
    <string name="book_buy_num">预购商品数量</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="pay_now">立即支付</string>
    <string name="str_1">1</string>
    <string name="unit_one_time">次</string>
    <string name="take_good_address">收货地址</string>
    <string name="take_prize_now">我要领奖</string>
    <string name="click_edit_address">点击修改地址</string>
    <string name="confirm_take_prize">确认领奖</string>
    <string name="user_head_str">头像</string>
    <string name="nick_name_str">昵称</string>
    <string name="my_info_str">我的资料</string>
    <string name="province_str">省份</string>
    <string name="city_str">城市</string>
    <string name="address_detail_str">详细地址</string>
    <string name="address_detail_hint">请输入详细地址</string>
    <string name="edit_address_str">修改地址</string>
    <string name="confirm_str">确认</string>
    <string name="cancel">取消</string>
    <string name="input_nickname">输入昵称</string>
    <string name="login_str">登录</string>
    <string name="login_out_str">注销</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_secure_code">请输入验证码</string>
    <string name="get_secure_code">获取验证码</string>
    <string name="secure_code_type">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="wechat_circle">微信朋友圈</string>
    <string name="qq_friend">QQ好友</string>
    <string name="wechat_friend">微信好友</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="choose_third_login">选择第三方登录</string>
    <string name="start_tuangou">预定量即开团</string>
    <string name="total_price">价值¥</string>
    <string name="down_payment">预付定金</string>
    <string name="deal_price">成交金额</string>
    <string name="confirm_received">确认收货</string>
    <string name="wx_pay_str">微信支付</string>
    <string name="ali_pay_str">支付宝支付</string>
    <string name="choose_pay_way">请选择支付方式</string>
    <string name="group_price_str">团购价</string>
    <string name="confirm_order_str">确认订单</string>

    <string name="translateBehavior">cc.pachira.onepurchase.behavior.TranslateBehavior</string>

    <string name="common_click_double_to_exit_app">再按一次退出应用~</string>
    <string name="common_error_network">网络异常，请检查网络~</string>
    <string name="common_error_service">请稍后，服务异常~</string>
    <string name="login_error_grant_refused">当前账号在别处设备登录，请注意账号使用安全</string>

    <string name="common_app_version_format">版本号：&lt;font color=\'#9a9a9a\'&gt;v %1$s&lt;/font&gt;</string>
    <string name="app_update_is_newly">当前已是最新版本！</string>
    <string name="app_update_is_unknown_error">检测失败,请稍候再试！</string>
    <string name="app_update_new_app">检测到新版本，是否升级?</string>
    <string name="app_update_new_app_desc_format">"最新版本：v %1$s&lt;br/&gt;新版大小：%2$s&lt;br/&gt;更新内容：%3$s</string>
    <string name="app_update_new_app_force_desc_format">"您需要更新应用才能继续使用&lt;br/&gt;最新版本：%1$s&lt;br/&gt;新版大小：%2$s&lt;br/&gt;更新内容：%3$s</string>
    <string name="app_update_status">正在更新</string>
    <string name="app_update_dialog_common_positive">立即更新</string>
    <string name="app_update_dialog_common_negative">暂不更新</string>
    <string name="app_update_dialog_common_neutral">下次再说</string>
    <string name="app_update_dialog_background_negative">后台更新</string>

    <!-- 自定义dialog -->
    <string name="material_dialog_common_title">温馨提示</string>
    <string name="material_dialog_common_alert">重要提醒</string>
    <string name="material_dialog_common_positive">确定</string>
    <string name="material_dialog_common_negative">取消</string>
    <string name="title_raid_detail">详情</string>
</resources>
