<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <ImageButton
            android:id="@+id/btn_turn_off"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="end"
            android:background="@null"
            android:padding="5dp"
            android:src="@drawable/turnoff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/book_buy_num"
            android:textColor="@color/steelGreyTwo"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_minus"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:src="@drawable/buy_min" />

            <TextView
                android:id="@+id/tv_buy_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:text="@string/str_1"
                android:textColor="@color/dark"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:src="@drawable/buy_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_bracket"
                android:textColor="@color/coolGreyTwo"
                android:textSize="13sp" />

            <!--购买限制-->
            <TextView
                android:id="@+id/tv_buy_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="每位用户限购3份"
                android:textColor="@color/coolGreyTwo"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_bracket"
                android:textColor="@color/coolGreyTwo"
                android:textSize="13sp" />

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_pay_now"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_h"
            android:background="@drawable/bg_bt_coral_four"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_now"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/unit_rmb"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_pay_sum_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="50.00"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>