<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:background="@drawable/bg_radius_nine"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp">

        <EditText
            android:id="@+id/et_input_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_stroke_grey"
            android:gravity="center"
            android:hint="@string/input_nickname"
            android:padding="5dp"
            android:textSize="13sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <include layout="@layout/divider_line_white11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/cancel"
                android:textColor="@color/btn_cancel_color"
                android:textSize="14sp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/whiteEleven" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/confirm_str"
                android:textColor="@color/btn_confirm_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>