<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <ImageButton
            android:id="@+id/btn_turn_off"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="end"
            android:background="@null"
            android:padding="5dp"
            android:src="@drawable/turnoff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_good_address"
                android:textColor="@color/steelGreyTwo"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bt_edit_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/click_edit_address"
                android:textColor="@color/pastelOrange"
                android:textSize="13sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_take_good_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="浙江省杭州市余杭区西溪润景大厦1幢430好哦个卡机案件个个看"
            android:textColor="@color/brownishGreyThree"
            android:textSize="15sp" />


        <View
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_confirm_take_now"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_h"
            android:background="@drawable/bg_bt_pasteorange_three"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_take_prize"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>