<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zenchn.support.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--购买记录-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/tv_order_good_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="80dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:maxWidth="230dp"
                    android:text=""
                    android:textColor="@color/dark"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@id/tv_order_good_name"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <!--原价-->
                    <TextView
                        android:id="@+id/tv_origin_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/steelGreyTwo"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/group_price_str"
                        android:textColor="@color/pastelOrange"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_rmb"
                        android:textColor="@color/pastelOrange"
                        android:textSize="13sp" />
                    <!--团购价-->
                    <TextView
                        android:id="@+id/tv_group_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_1"
                        android:textColor="@color/pastelOrange"
                        android:textSize="13sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_good_pic"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_no_pic" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_is_group_price"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/h_group_price" />

        </RelativeLayout>


        <!--收货地址-->
        <LinearLayout
            android:id="@+id/rl_take_good_address"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="visible">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_good_address"
                android:textColor="@color/warmGreySix"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_take_good_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="浙江省杭州市余杭区西大厦1幢4..."
                android:textColor="@color/dark"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_edit_address"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_stroke_orange_four"
                android:text="@string/edit_address_str"
                android:textColor="@color/pastelOrange"
                android:textSize="11sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_pay_now"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_h"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_bt_coral_four"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_now"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/unit_rmb"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_pay_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="50.00"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>